tests/snapshots/examples_fixtures/patterns__list_patterns.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/patterns/list_patterns.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E077]: LEGACY LIST TAIL

Use `[]` as the empty list tail instead of `None`.

  --> examples/patterns/list_patterns.flx:14:25
   |
14 | let xs = [1 | [2 | [3 | None]]];
   |                         ^^^^

Hint:
  Replace `None` with `[]` in cons expressions, for example: `[1 | []]`.


--> compiler error[E077]: LEGACY LIST TAIL

Use `[]` as the empty list tail instead of `None`.

  --> examples/patterns/list_patterns.flx:57:30
   |
57 | let data = [10 | [20 | [30 | None]]];
   |                              ^^^^

Hint:
  Replace `None` with `[]` in cons expressions, for example: `[1 | []]`.

Found 2 errors.
== stdout ==
<not executed>
